{
  "appName": "Jasstafel",
  "schieber": "Schieber",
  "coiffeur": "Coiffeur",
  "differenzler": "Differenzler",
  "molotow": "Molotow",
  "guggitaler": "Guggitaler",
  "pointBoard": "Punktetafel",
  "schlaeger": "Schläger",
  "settings": "Einstellungen",
  "settingsTitle": "{type} - Einstellungen",
  "@settingsTitle": {
    "placeholders": {
      "type": {
        "type": "String"
      }
    }
  },
  "commonSettings": "Allgemeine Einstellungen",
  "language": "Sprache",
  "ok": "Ok",
  "cancel": "Abbrechen",
  "back": "zurück",
  "undo": "Rückgängig",
  "points": "Punkte",
  "pointsOf": "Punkte von {name}",
  "@pointsOf": {
    "placeholders": {
      "name": {
        "type": "String"
      }
    }
  },
  "rounds": "Anzahl Runden",
  "noOfRounds": "{count, plural, one{1 Runde} other{{count} Runden}}",
  "@noOfRounds": {
    "placeholders": {
      "count": {
        "type": "int"
      }
    }
  },
  "currentRound": "Aktuelle Runde",
  "roundTitle": "Runde {roundNumber}",
  "@roundTitle": {
    "placeholders": {
      "roundNumber": {
        "type": "int"
      }
    }
  },
  "roundProgress": "{count, plural, one{{roundNumber}/1 Runde} other{{roundNumber}/{count} Runden}}",
  "@roundProgress": {
    "placeholders": {
      "roundNumber": {
        "type": "int"
      },
      "count": {
        "type": "int"
      }
    }
  },
  "teamNo": "Team {no}",
  "@teamNo": {
    "placeholders": {
      "no": {
        "type": "int"
      }
    }
  },
  "teamName": "Teamname",
  "playerNo": "Spieler {no}",
  "@playerNo": {
    "placeholders": {
      "no": {
        "type": "int"
      }
    }
  },
  "playerName": "Spielername",
  "goalPoints": "Zielpunkte",
  "goalPoints1": "Zielpunkte Team 1",
  "columnName": "Spaltentitel",
  "whoBegins": "Wer verteilt die Karten?",
  "whoBeginsInfo": "Lange auf einen Namen klicken um die Auswahl zu ändern. Reihenfolge kann durch Ziehen geändert werden.",
  "stats": "Statistiken",
  "showStats": "Statistiken anzeigen",
  "resetStats": "Statistiken zurücksetzen",
  "showCurrentRound": "Aktuelle Runde anzeigen",
  "duration": "{minutes} min gespielt",
  "@duration": {
    "placeholders": {
      "minutes": {
        "type": "int"
      }
    }
  },
  "reset": "Punkte zurücksetzen",
  "backsideTitle": "Schieber Rückseite",
  "backsideSetting": "Rückseite verwenden",
  "backsideColumns": "Spalten auf der Rückseite",
  "differentGoals": "verschiedene Zielpunkte",
  "pointsPerRound": "Punkte pro Runde",
  "keepScreenOn": "Bildschirm immer an",
  "allowTouch": "Punkteingabe per Touchscreen",
  "vibrateOnTouch": "Vibration bei Punkteingabe",
  "bigScore": "Total gross anzeigen",
  "undoButton": "Rückgängig-Knopf anzeigen",
  "drawZ": "Hilfslinien (Z) anzeigen",
  "resetConfirm": "Sollen wirklich alle Punkte gelöscht werden?",
  "resetConfirmStrokes": "Sollen wirklich alle Striche gelöscht werden?",
  "emptyStatistics": "Alle Statistiken sind bereits gelöscht!",
  "gameOver": "Gewonnen!",
  "winner": "{winnerName} hat die Zielpunkte erreicht!",
  "@winner": {
    "placeholders": {
      "winnerName": {
        "type": "String"
      }
    }
  },
  "winnerBothPoints": "Beide Teams haben die Zielpunkte erreicht!",
  "winnerBoth": "Beide Teams haben gewonnen!",
  "winnerFirst": "Wer war zuerst?",
  "hillBoth": "Beide Teams haben den Bergpreis erreicht!",
  "teamNameChanged": "Teamname geändert!",
  "matchPointsChanged": "Match-Punkte geändert!",
  "pointsPerRoundChanged": "Punkte pro Runde geändert!",
  "resetPointsPerRound": "Punkte pro Runde auf {points} ändern?",
  "@resetPointsPerRound": {
    "placeholders": {
      "points": {
        "type": "int"
      }
    }
  },
  "deleteWhat": "Was soll zurückgesetzt werden?",
  "resetAll": "Alles",
  "invalidInput": "ungültige Eingabe",
  "matches": "Matches",
  "tricks": "Stiche",
  "match": "Match",
  "total": "Total",
  "win": "Sieg",
  "wins": "Siege",
  "opponent": "Gegner",
  "totalPoints": "Total: {points}",
  "@totalPoints": {
    "placeholders": {
      "points": {
        "type": "int"
      }
    }
  },
  "totalWithOpponent": "Total: {points} (Gegner: {opponentPoints})",
  "@totalWithOpponent": {
    "placeholders": {
      "points": {
        "type": "int"
      },
      "opponentPoints": {
        "type": "int"
      }
    }
  },
  "screenRotate": "Dialog umdrehen",
  "weis": "Weis",
  "hill": "Bergpreis",
  "eicheln": "Eicheln",
  "schellen": "Schellen",
  "schilten": "Schilten",
  "rosen": "Rosen",
  "schaufel": "Schaufel",
  "kreuz": "Kreuz",
  "ecken": "Ecken",
  "herz": "Herz",
  "obenabe": "Obenabe",
  "obe": "Obe",
  "ondenufe": "Undenufe",
  "onde": "Onde",
  "slalom": "Slalom",
  "gusti": "Gusti",
  "misere": "Misere",
  "wunsch": "Wunsch",
  "mery": "Mery",
  "variable": "Variabel",
  "free": "Frei",
  "joker": "Joker",
  "trump": "Trumpf",
  "obenabeOndenufe": "Obenabe / Undenufe",
  "obeOnde": "Obe / Onde",
  "slalomGusti": "Slalom / Gusti",
  "gustiMery": "Gusti / Mery",
  "superEicheln": "Super-Eicheln",
  "tutti": "Tutti",
  "tannenbaum": "Tannenbaum",
  "emmental": "Emmentaler",
  "blind": "Blind",
  "xTimes": "Welcher Jass zählt {factor}fach?",
  "@xTimes": {
    "placeholders": {
      "factor": {
        "type": "int"
      }
    }
  },
  "xRound": "Welcher Jass gilt in Runde {round}?",
  "@xRound": {
    "placeholders": {
      "round": {
        "type": "int"
      }
    }
  },
  "denominator10": "Punkte auf 10er Runden",
  "roundingNone": "Nicht runden",
  "roundingRound": "Runden",
  "roundingCeil": "Aufrunden",
  "roundingFloor": "Abrunden",
  "threeTeams": "3 Teams",
  "thirdColumn": "Auswertungsspalte",
  "setFactorManually": "Eigene Multiplikatoren verwenden",
  "completedRows": "Vollständige Runden ausgrauen",
  "shown": "angezeigt",
  "hidden": "ausgeblendet",
  "coiffeurSummary": "Maximal mögliche Punkte",
  "team": "Team",
  "current": "aktuell",
  "min": "min",
  "max": "max",
  "matchPoints": "Match-Punkte",
  "matchBonus": "Match-Prämie verwenden",
  "matchBonusInfo": "Konstante Prämie für einen Match zusätzlich zu den {matchPoints} Punkten.",
  "@matchBonusInfo": {
    "placeholders": {
      "matchPoints": {
        "type": "int"
      }
    }
  },
  "matchBonusVal": "Match-Prämie",
  "matchMalusVal": "Konter-Match-Strafe",
  "pointsRounded": "gerundet {rounded}",
  "@pointsRounded": {
    "placeholders": {
      "rounded": {
        "type": "int"
      }
    }
  },
  "countingType": "Zählweise",
  "scratch": "Streichen",
  "activatedBonus": "Match-Prämie aktiviert",
  "deactivatedBonus": "Match-Prämie deaktiviert",
  "resetMatchPoints": "Match-Punkte auf {points} ändern?",
  "@resetMatchPoints": {
    "placeholders": {
      "points": {
        "type": "int"
      }
    }
  },
  "resetMatchBonus": "Match-Prämie deaktivieren?",
  "profiles": "Profile",
  "selectProfile": "Profil auswählen",
  "profileInfo": "Einstellungen in Profilen speichern, um einfach hin und her zu wechseln.",
  "profileName": "Profilname",
  "deleteProfile": "Profil löschen",
  "deleteProfileName": "Profil {profileName} löschen?",
  "@deleteProfileName": {
    "placeholders": {
      "profileName": {
        "type": "String"
      }
    }
  },
  "copyProfile": "Profil kopieren",
  "exportProfile": "Profil exportieren",
  "addProfileFail": "Ein Profil mit diesem Namen existiert bereits!",
  "hint2win": "Mit durchschnittlich {averagePoints} Punkten gewinnt {teamName}.",
  "@hint2win": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "averagePoints": {
        "type": "int"
      }
    }
  },
  "hint2winMatches": "{teamName} reicht ein {factor}x-Match um zu gewinnen.",
  "@hint2winMatches": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "factor": {
        "type": "int"
      }
    }
  },
  "hint2winSpecial": "{teamName} reichen {points} Punkte im {factor}x um zu gewinnen.",
  "@hint2winSpecial": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "factor": {
        "type": "int"
      },
      "points": {
        "type": "int"
      }
    }
  },
  "hint2lead": "{teamName} benötigt durchschnittlich {averagePoints} Punkte um nicht zu verlieren.",
  "@hint2lead": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "averagePoints": {
        "type": "int"
      }
    }
  },
  "hint2loseMatches": "{teamName} benötigt einen {factor}x-Match um nicht zu verlieren.",
  "@hint2loseMatches": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "factor": {
        "type": "int"
      }
    }
  },
  "hint2loseOther": "In den weiteren Runden benötigt {teamName} durchschnittlich {averagePoints} um nicht zu verlieren.",
  "@hint2loseOther": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "averagePoints": {
        "type": "int"
      }
    }
  },
  "hintCounterMatch": "{teamName} benötigt einen Konter-Match um nicht zu verlieren.",
  "@hintCounterMatch": {
    "placeholders": {
      "teamName": {
        "type": "String"
      }
    }
  },
  "hintLost": "{teamName} müsste durchschnittlich {averagePoints} Punkte erreichen um zu gewinnen.",
  "@hintLost": {
    "placeholders": {
      "teamName": {
        "type": "String"
      },
      "averagePoints": {
        "type": "int"
      }
    }
  },
  "matchInfo": "Die Berechnungen basieren auf der Annahme, dass für einen Match {matchPoints} Punkte geschrieben werden.",
  "@matchInfo": {
    "placeholders": {
      "matchPoints": {
        "type": "int"
      }
    }
  },
  "matchInfoBonus": "Die Berechnungen basieren auf der Annahme, dass für einen Match {matchPoints} Punkte geschrieben werden. Für einen Match gibt es einen Bonus von {matchBonus} Punkten.",
  "@matchInfoBonus": {
    "placeholders": {
      "matchPoints": {
        "type": "int"
      },
      "matchBonus": {
        "type": "int"
      }
    }
  },
  "enterGuess": "Ansage von {playerName}",
  "@enterGuess": {
    "placeholders": {
      "playerName": {
        "type": "String"
      }
    }
  },
  "diffPlayers": "Anzahl Spieler",
  "roundEditX": "Runde {roundNumber} bearbeiten",
  "@roundEditX": {
    "placeholders": {
      "roundNumber": {
        "type": "int"
      }
    }
  },
  "roundEdit": "Runde bearbeiten",
  "guessEdit": "Ansagen bearbeiten",
  "totalGuessed": "Geschätzt: {totalGuess}",
  "@totalGuessed": {
    "placeholders": {
      "totalGuess": {
        "type": "int"
      }
    }
  },
  "avgGuess": "Ansage Ø ",
  "avgPoints": "Punkte Ø ",
  "zeroGuess": "Ans.=0",
  "zeroDiff": "Diff.=0",
  "avgRoundGuess": "Durchschnittlich wurden pro Runde {averageGuess} Punkte angesagt.",
  "@avgRoundGuess": {
    "placeholders": {
      "averageGuess": {
        "type": "int"
      }
    }
  },
  "hideGuess": "Ansagen verstecken",
  "addRound": "Runde eingeben",
  "addDominoRound": "Domino Runde eingeben",
  "handWeis": "Handweis",
  "tableWeis": "Tischweis",
  "fremdWeis": "Fremdweis (2x)",
  "remainingPoints": "Total: {total}, ausstehend: {remaining}",
  "@remainingPoints": {
    "placeholders": {
      "total": {
        "type": "int"
      },
      "remaining": {
        "type": "int"
      }
    }
  },
  "screenOrientation": "Bildschirm drehen",
  "sensor": "Sensor",
  "portrait": "Hochformat",
  "landscape": "Querformat",
  "theme": "Design",
  "system": "System",
  "light": "Hell",
  "dark": "Dunkel",
  "undoBarText": "{points} Punkte für {teamName}",
  "@undoBarText": {
    "placeholders": {
      "points": {
        "type": "int"
      },
      "teamName": {
        "type": "String"
      }
    }
  },
  "queen": "Ober",
  "rosesKing": "Rosen König",
  "lastTrick": "Letzter Stich",
  "selectPlayer": "Wähle zuerst einen Spieler",
  "negative": "Negativ",
  "goal": "Ziel",
  "noGoal": "kein Ziel",
  "goalType": "Ziel des Spiels",
  "positiveGoal": "Je mehr Punkte desto besser",
  "negativeGoal": "Je weniger Punkte desto besser",
  "enablePpr": "Fixe Punkte pro Runde",
  "winnerRounds": "{winnerName} hat gewonnen!",
  "@winnerRounds": {
    "placeholders": {
      "winnerName": {
        "type": "String"
      }
    }
  },
  "winnersRounds": "{winnerName1} und {winnerName2} haben gewonnen!",
  "@winnersRounds": {
    "placeholders": {
      "winnerName1": {
        "type": "String"
      },
      "winnerName2": {
        "type": "String"
      }
    }
  },
  "nfc": "Einstellungen per NFC übertragen",
  "nfcNotAvailable": "Gerät unterstützt kein NFC",
  "nfcDisabled": "NFC ausgeschaltet",
  "nfcEnabled": "Halte die Smartphones zusammen um die Einstellungen zu übertragen.",
  "importProfile": "Profil {profileName} importieren",
  "@importProfile": {
    "placeholders": {
      "profileName": {
        "type": "String"
      }
    }
  },
  "importProfileHint": "Profil {profileName} bleibt unverändert erhalten!",
  "@importProfileHint": {
    "placeholders": {
      "profileName": {
        "type": "String"
      }
    }
  },
  "replaceProfile": "Profil {profileName} ersetzen",
  "@replaceProfile": {
    "placeholders": {
      "profileName": {
        "type": "String"
      }
    }
  },
  "replaceProfileHint": "Die aktuellen Einstellungen und Spielstände werden überschrieben!",
  "missingPlayer": "Leeres Feld",
  "missingP1": "Oben Links",
  "missingP2": "Oben Rechts",
  "missingP3": "Unten Links",
  "missingP4": "Unten Rechts",
  "domino": "Domino",
  "domino3player": "Dominopunkte 3 Spieler",
  "domino4player": "Dominopunkte 4 Spieler",
  "dominoPointsInfo": "Punkte der ersten {noOfPlayers} Spieler getrennt durch Kommas",
  "@dominoPointsInfo": {
    "placeholders": {
      "noOfPlayers": {
        "type": "int"
      }
    }
  }
}
