...
class SchieberData implements SpecificData {
  var settings = SchieberSettings();
  var team = [TeamData("Team 1"), TeamData("Team 2")];
  final List<SchieberRound> _rounds = [];

  var statistics = SchieberStatistics();
  var backside = List.filled(6, SchieberBacksideData());

  SchieberData();
  @override
  void reset() {
    // statistics.duration +=
    for (var t = 0; t < team.length; t++) {
...
